# bsf-arduino-weightstation

./: .gitignore  CMakeLists.txt  README.md  bsf-arduino-weightstation.ino  bsf-weightstation.ino  elecrowtft.ino  enc28j60.ino  hx711.ino  mqtt.ino
libraries/EtherSia/src/: EtherSia.h
src/: Display.h  Recipe.h  ReplyEnum.h
src/Recipe/: Recipe.cpp  Recipe.h
